--- a/Library Management/WebContent/css/main.css
+++ b/Library Management/WebContent/css/main.css
@@ -4,13 +4,22 @@ jumbotron{
 }
 
 .scImage{
-	height: 260px;
-	width: 260px;
+	height: 230px;
+	width: 80%;
+	opacity: 0.8;
+}
+
+.scImage:hover{
+	opacity: 1.0;
 }
 
 .carousel .carousel-inner{
 	height: 250px;
 	width: 100%; 
 	margin: 0px auto;
+}
+
+.col-sm-3{
+	padding : 30px;
 }
 
