--- a/Library Management/WebContent/views/home.html
+++ b/Library Management/WebContent/views/home.html
@@ -1,94 +1,33 @@
-<section>
-<div class="page-header">
-		<h2>Please Login/Register</h2>
-</div>
-<div class="row">
-  <div class="col-sm-3">
-          <ul class="nav  nav-stacked">
-            <li ><a class="btn btn-info" ng-click="showView('new')">New User</a></li>
-            <li><a class="btn btn-info" ng-click="showView('login')">Login</a></li>
-          </ul>
-    </div>
-    
-    <div class="col-sm-9">
-  	<div ng-show="registerView">
-  		<form action="" class="form-horizontal">
-					<div class="form-group">
-						<label for="email" class="col-sm-2 cotrol-label">
-							Email* 
-						</label>
-						<div class="col-sm-6">
-							<input type="email" class="form-control" id="email" placeholder="Email" required>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="user-name" class="col-sm-2 cotrol-label">
-							Password*
-						</label>
-						<div class="col-sm-6">
-							<input type="password" class="form-control" id="user-name" placeholder="Password" required>
-						</div>
-					</div>
-					
-					
-					<div class="form-group">
-						<div class="col-sm-6 col-sm-offset-2">
-							<button type="submit" class="btn btn-primary">Submit</button>
-						</div>
-					
-					</div>
-					
-				</form>
-  	</div>
-  	
-  	<!-- REGISTRATION FORM -->
-    <div ng-show="loginView" class="text-left">
-  		<form action="" class="form-horizontal">
-					<div class="form-group">
-						<label for="user-name" class="col-sm-2 cotrol-label">
-							Name*
-						</label>
-						<div class="col-sm-6">
-							<input type="text" class="form-control" id="user-name" placeholder="Name" required>
-						</div>
-					</div>
-					
-					<div class="form-group">
-						<label for="email" class="col-sm-2 cotrol-label">
-							Email* 
-						</label>
-						<div class="col-sm-6">
-							<input type="email" class="form-control" id="email" placeholder="Email" required>
-						</div>
-					</div>
-					
-					<div class="form-group">
-						<label for="phone" class="col-sm-2 cotrol-label">
-							Phone
-						</label>
-						<div class="col-sm-6">
-							<input type="number" class="form-control" id="phone" placeholder="Phone">
-						</div>
-					</div>
-					
-					<div class="form-group">
-						<label for="user-message" class="col-sm-2 cotrol-label">
-							Comments
-						</label>
-						<div class="col-sm-6">
-							<textarea name="user-message" id="user-message" class="form-control" cols="20" rowws="10" placeholder="Comments"></textarea>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-6 col-sm-offset-2">
-							<button type="submit" class="btn btn-primary">Submit</button>
-						</div>
-					
-					</div>
-					
-				</form>
-  	</div>
-  </div>
-  </div>
-  
-</section>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+<title>Undercover Library</title>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="bootstrap/css/cover.css">
+	<link rel="stylesheet" href="css/main.css">
+</head>
+<script src="js/angular/angular.min.js" ></script>
+<script src="https://code.angularjs.org/1.5.8/angular-route.js"></script>  
+<script src="js/app.js" ></script>
+<body ng-app="libraryApp">
+	<!-- Nav Bar -->
+	<div ng-include="'partials/navbar.html'"></div>
+	<!-- Nav Bar -->	
+	
+	<!-- Slider -->
+	<div ng-include="'partials/slider.html'"></div>
+	<!-- Slider -->	
+	
+	<!-- BODY CONTAINER -->
+	<div ng-include="'partials/homeBody.html'"></div>
+	<!-- BODY CONTAINER -->	
+	
+	<!-- Footer-->
+	<div ng-include="'partials/footer.html'"></div>
+	<!-- Footer -->	
+<script src="js/angular/jquery-3.1.0.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+</body>
+</html>
