Home Page completed
Home Page completed

--- a/Library Management/WebContent/partials/navbar.html
+++ b/Library Management/WebContent/partials/navbar.html
@@ -8,7 +8,7 @@
 				<div class="text-left"><a href="/"><img src="images/logo/logo.png" height="50px" width="50ox"> </a></div>
 			</div><!--NAV BAR HEADER-->
 			<div class="collapse navbar-collapse" id="navbar-collapse">
-			<a href="http://localhost:8080/Library_management_System/home.html" class="btn btn-info navbar-btn navbar-right">Start Here</a>
+			<a href="home.html" class="btn btn-info navbar-btn navbar-right">Start Here</a>
 				<ul class="nav navbar-nav">
 			      <li><a href="#">Home</a></li>
                   <li><a href="#">Features</a></li>
