--- a/Library Management/WebContent/partials/navbar.html
+++ b/Library Management/WebContent/partials/navbar.html
@@ -5,7 +5,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<div class="text-left"><a href="/"><img src="images/logo/logo.png" height="50px" width="50ox"> </a></div>
+				<div class="text-left"><a href="/"><img src="images/logo/logo.png" height="50px" width="50px"> </a></div>
 			</div><!--NAV BAR HEADER-->
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 			<a href="home.html" class="btn btn-info navbar-btn navbar-right">Start Here</a>
